--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h3>Score:<span id="score">0</span></h3>
     <button id="start-button">Start/Pause</button>
 
+    <button>New Button</button>
+
     <div class="container">
       <div class="grid">
         <div></div>
