--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
 
+    <h1>Burger Bar</h1>
     <h3>Score:<span id="score">0</span></h3>
     <button id="start-button">Start/Pause</button>
 
